readarr/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
  labels:
    app.kubernetes.io/name: readarr
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: readarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: readarr
    spec:
      containers:
      - name: readarr
        image: ghcr.io/linuxserver/readarr
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8787
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /login
            port: http
          initialDelaySeconds: 60
        readinessProbe:
          httpGet:
            path: /login
            port: http
        resources:
          limits:
            memory: 600Mi
          requests:
            cpu: 100m
            memory: 600Mi
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /downloads
          name: media
          subPath: Download
        - mountPath: /books
          name: sync
          subPath: books
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: readarr-config
      - name: media
        persistentVolumeClaim:
          claimName: media-share
